# infra-viz

./: .gitignore  README.md  collect.py  pyproject.toml  server.py
static/: code.js  style.css
templates/: index.html
