[tool.poetry]
name = "infra-viz"
version = "0.1.0"
description = ""
authors = ["Mark Lynch <mark@learnosity.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.19.12"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
